--- a/package.json
+++ b/package.json
@@ -8,30 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "@babel/eslint-parser": "^7.19.1",
+    "autoprefixer": "^10",
+    "core-js": "^3.28.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
-    "vue": "^3.2.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "vue": "^3.2.47",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/core": "^7.20.12",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
     "node-loader": "^2.0.0",
-    "prettier": "^2.4.1",
-    "sass": "^1.57.1",
+    "prettier": "^2.8.4",
+    "sass": "^1.58.3",
     "sass-loader": "^12.6.0",
-    "style-resources-loader": "^1.5.0"
+    "style-resources-loader": "^1.5.0",
+    "vue-cli-plugin-tailwind": "^3.0.0"
   },
   "eslintConfig": {
     "root": true,
