--- a/package.json
+++ b/package.json
@@ -8,32 +8,37 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.19.1",
     "autoprefixer": "^10",
     "core-js": "^3.28.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vue": "^3.2.47",
+    "vue-awesome": "^4.5.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@intlify/unplugin-vue-i18n": "^0.8.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
     "node-loader": "^2.0.0",
-    "prettier": "^2.8.4",
+    "prettier": "2.8.4",
     "sass": "^1.58.3",
     "sass-loader": "^12.6.0",
     "style-resources-loader": "^1.5.0",
-    "vue-cli-plugin-tailwind": "^3.0.0"
+    "vue-cli-plugin-tailwind": "^3.0.0",
+    "vue-cli-plugin-vue-i18n": "^1.0.1"
   },
   "eslintConfig": {
     "root": true,
