--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "tw-elements": "^1.0.0-beta1",
     "vue": "^3.2.47",
     "vue-awesome": "^4.5.0",
     "vue-router": "^4.0.3",
