--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "autoprefixer": "^10",
+    "axios": "^1.3.4",
     "core-js": "^3.28.0",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
@@ -22,6 +23,7 @@
     "tw-elements": "^1.0.0-beta1",
     "vue": "^3.2.47",
     "vue-awesome": "^4.5.0",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
